fix smaller font size on mobile

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -89,8 +89,8 @@ html {
         padding-right: 6%;
     }
 
-    .code-carousel {
-        font-size: 0.4rem;
+    .code-carousel pre .hljs {
+        font-size: 0.8rem;
     }
 }
 
